# RM-tp2

./: CMakeLists.txt  Makefile  README.md  croblink.py  mapperRob.py  run.sh  startC1  startC2  startC2a  startC3  startC4  startC4-XL  startScenario1
GUISample/: CMakeLists.txt  GUISample  lmap.cpp  main.cpp  robview.cpp  robview.h  sampapp.cpp  sampapp.h
Labs/rmi-2223/: C1-config.xml  C1-grid.xml  C1-lab.xml  C2-lab.xml  C2a-config.xml  C2a-grid.xml  C2a-lab.xml  C3-grid.xml  C3-lab.xml  C4-config.xml  C4-lab.xml  C4XL-config.xml  C4XL-grid.xml  C4XL-lab.xml
Viewer/: CMakeLists.txt  Viewer  crqdataview.cpp  crqlabview.cpp  crqparamhandler.cpp  crqrobotinfo.cpp  crqscene.cpp  main.cpp
Viewer/Comm/: crqcomm.h  crqcommhandler.cpp
Viewer/Lab/: crlab.cpp  crrobot.cpp
jClient/: jClient.java
jClient/ciberIF/: ciberIF.java
libRobSock/: CMakeLists.txt  RobSock.cpp  RobSock.h  cmeasures.cpp  cmeasures.h  croblink.cpp  croblink.h  netif.cpp  netif.h  structureparser.cpp
logplayer/: CMakeLists.txt  cblabhandler.cpp  cbloghandler.cpp  cblogplayer.cpp  cbrobot.cpp  logplayer  logplayer.cpp
pClient/: mainRob.py  mapperRob.py  myRob.py  mymap.map  mymap.path  notes.txt
robsample/: CMakeLists.txt  mainRob.c  robsample
simulator/: CMakeLists.txt  cbcontrolpanel.cpp  cbcontrolpanel.h  cbgraph.cpp  cblab.cpp  cblab.h  cblabdialog.cpp  cblabdialog.h  cblabhandler.cpp  cbmanagerobots.cpp  cbmanagerobots.h  cbparamdialog.cpp  cbparamdialog.h  cbparameters.cpp  cbparameters.h  cbparamhandler.cpp  cbpoint.cpp  cbpoint.h  cbrobot.cpp  cbrobot.h  cbsensor.cpp  cbsensor.h  cbsimulator.cpp  cbsimulator.h  cbsimulatorGUI.cpp  cbsimulatorGUI.h  cbsimulatorGUI.ui  cbwall.cpp  cbwall.h  mapping_score.awk  planning.out  planning_score.awk  simulator  simulator.cpp
