cmake_minimum_required(VERSION 3.5)
project(ciberRatoTools)

# Compile in Release by default
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  message(STATUS "Setting build type to 'Release' as none was specified.")
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
  # Set the possible values of build type for cmake-gui
  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
    "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()


set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt5 COMPONENTS Widgets Multimedia Network Xml REQUIRED)

# Global macros that define TRUE and FALSE
# Should TRUE and FALSE exist??
add_compile_options(-DTRUE=1 -DFALSE=0)

add_subdirectory(simulator)
add_subdirectory(Viewer)
add_subdirectory(libRobSock)
add_subdirectory(logplayer)
add_subdirectory(robsample)
add_subdirectory(GUISample)
